Swapped Address parameters + Improved gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## FABAN IGNORES ... ##
 common/build
 common/build.properties
 driver/build
@@ -26,3 +27,40 @@ stage/release
 stage/resources/
 stage/samples/
 stage/src.zip
+
+###############################################
+## Additional (Not defined by FABAN) ignores ##
+
+# Eclipse stuff #
+#################
+.settings/
+.classpath
+.project
+*cpd-report.txt
+
+# Javadoc Documentation #
+###################
+*.html
+
+# Compiled source #
+###################
+*.com
+*.class
+*.jar
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.rar
+*.tar
+
+
